devolobment the web

--- a/nature.html
+++ b/nature.html
@@ -9,7 +9,28 @@
 </head>
 <body>
     <nav class="navbar">
-        
+     <div>
+        <button class="login">Login</button>
+        <button class="signup">Sign Up</button>
+     </div>
+     <div class="title">
+        <h1 title="It's time to protect it from US">Nature</h1>
+        <div class="line"></div>
+     </div>   
+     <div>
+
+     </div>
     </nav>
+    <main>
+        <div>
+            <button class="buttons e">Energy</button>
+        </div>
+        <div>
+            <button class="buttons j">Jungles</button>
+        </div>
+        <div>
+            <button class="buttons d" >Deserts</button>
+        </div>
+    </main>
 </body>
 </html>
