--- a/nature.html
+++ b/nature.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
      <div>
-        <button class="login">Login</button>
+        <button class="login"><i class="fa-solid fa-tree" style="color: #1aa236;"></i>Login</button>
         <button class="signup">Sign Up</button>
      </div>
      <div class="title">
@@ -18,7 +18,7 @@
         <div class="line"></div>
      </div>   
      <div>
-
+        <button class="navicon"><i class="fa-solid fa-bars fa-2xl"></i></button>
      </div>
     </nav>
     <main>
@@ -32,5 +32,6 @@
             <button class="buttons d" >Deserts</button>
         </div>
     </main>
+<script src="https://kit.fontawesome.com/b6b502ff42.js" crossorigin="anonymous"></script>
 </body>
 </html>
